content overlapping issue fixed - related to static footer

--- a/look-core/css/default.css
+++ b/look-core/css/default.css
@@ -2,13 +2,14 @@
 ** Bootstrap over-rides
 */
 html, body {
-  height: 100%;
+  /*height: 100%;*/
 }
 
 body {
   display: flex;
   height: 100%;
   flex-direction: column;
+	min-height: 100vh;
 }
 .page-content {
   flex: 1 0 auto;
